--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout: default
 title: homepages
 ---
-
+<h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2>
+<br>
 <h2>{{ page.title }}</h2>
 　　<p>最新文章</p>
 　　<ul>
@@ -10,3 +11,11 @@ title: homepages
 　　　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 　　　　{% endfor %}
 　　</ul>
+<br>
+个人邮箱：<a href="mailto:{{ site.email }}">@iotcoder</a>
+<br>
+新浪微博：<a href="http://weibo.com/echo404">@赖斌</a>
+<br>
+QQ：156143422
+<br>
+Blog：<a href="http://wp.iotor.site">wp-blog</a>
