--- a/2016-08-09-Jekyll-Liquid-doc.html
+++ b/2016-08-09-Jekyll-Liquid-doc.html
@@ -2,13 +2,7 @@
 layout: default
 title: Jekyll/Liquid API 语法文档
 ---
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-    <div class="wrap">
+{% include top.html %}
 <div class="content"><h1>Jekyll/Liquid API 语法文档</h1>
 <!-- <div class="meta">
     <a href="http://ju.outofmemory.cn/feed/3256/" title="Vermillion Phoinix by Alfred Sun"><i class="ico man"></i>Vermillion Phoinix by Alfred Sun</a>
