--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 layout: default
 title: homepages
 ---
+
 <h2>{{ page.title }}</h2>
-<h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2>
+<h2>{{ site.name }}</h2>
 <p>最新文章</p>
 <ul>
 　　{% for post in site.posts %}
@@ -11,6 +12,7 @@ title: homepages
 　　{% endfor %}
 </ul>
 <!-- <h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2>
+<h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2>
 <br>
 
 <br>
@@ -20,4 +22,4 @@ title: homepages
 <br>
 QQ：156143422
 <br>
-Blog：<a href="http://wp.iotor.site">wp-blog</a> -->
+Blog：<a href="http://wp.iotor.site">wp-blog</a>  -->
