--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: homepages
 </ul>
 <hr>
 <!-- <h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2> -->
-	<h2>语法参考文档:<a target="_blank><img src="/img/Jekyll_Liquid_detail.png" targ>Jekyll/Liquid语法参考</a></h2>
+	<h2>语法参考文档:<a href="/img/Jekyll_Liquid_detail.png" target="_blank>Jekyll/Liquid语法参考</a></h2>
 <br>
 
 <br>
