--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: homepages
 　　{% endfor %}
 </ul>
 <hr>
-<!-- <h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2> -->
+<div align="center">
+	<!-- <h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2> -->
 	<h2>语法参考文档:<a href="/img/Jekyll_Liquid_detail.png" target="_blank">Jekyll/Liquid语法参考</a></h2>
 <br>
 
@@ -24,3 +25,4 @@ title: homepages
 QQ：156143422
 <br>
 Blog：<a href="http://wp.iotor.site">wp-blog</a>
+</div>
