--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: homepages
 ---
 
 <!-- <h2>{{ page.title }}</h2> -->
-<h2>{{ site.name }}</h2>
+<h2 align="center">{{ site.name }}</h2>
 <p>最新文章</p>
 <ul>
 　　{% for post in site.posts %}
@@ -16,7 +16,7 @@ title: homepages
 	<!-- <h2>语法参考文档:<a href="/2016-08-09-Jekyll-Liquid-doc.html">Jekyll/Liquid语法参考</a></h2> -->
 	<h2>语法参考文档:<a href="/img/Jekyll_Liquid_detail.png" target="_blank">Jekyll/Liquid语法参考</a></h2>
 <br>
-
+<hr>
 <br>
 个人邮箱：<a href="mailto:{{ site.email }}">@iotcoder</a>
 <br>
